[package]
name = "kong-log-server"
version = "0.1.0"
authors = ["Junfeng Liu <china.liujunfeng@gmail.com>"]
repository = "https://github.com/J-F-Liu/kong-log-server.git"
license = "MIT"
readme = "README.md"
description = "Receive and collect logs from Kong's HTTP Log plugin."
keywords = ["kong", "HTTP_Log"]
edition = "2018"

[dependencies]
tide = "0.2.0"
serde_json = "1.0.39"
